<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="a105590015.hw3.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="1"
        android:text="@string/Sex"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spnSex"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="1"
        android:entries="@array/sex_list"
        android:prompt="@string/hintSex"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_weight="1"
        android:text="@string/Age"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radGrp"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radAge1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radAge2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radAge3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_weight="1"
        android:text="@string/family"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtFamilyNum"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="1"
        android:text="預設為3" />

    <NumberPicker
        android:id="@+id/numPicFamily"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="138dp"
        android:layout_height="19dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/enter"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtSug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/suggest"
        android:textSize="25sp" />

</LinearLayout>
